--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
        run: |
          python -m pip install --upgrade pip
          pip install -r requirements.txt
+         pip install ruff
+     - name: Run lint checks
+       run: |
+         ruff check .
      - name: Run tests
        run: |
          pytest -q
