--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,26 +1,41 @@
 name: CI
 on:
- pull_request:
  push:
    branches: ["main"]
+ pull_request:
+   branches: ["main"]
+ workflow_dispatch:
 jobs:
- test:
+ lint-and-test:
    runs-on: ubuntu-latest
+   env:
+     PYTHONPATH: ${{ github.workspace }}
+     DATABASE_URL: sqlite+pysqlite:///:memory:
+     TFL_BASE_URL: https://api.tfl.gov.uk
+     TFL_APP_ID: ""
+     TFL_APP_KEY: ""
    steps:
-     - name: Checkout code
+     - name: Checkout
        uses: actions/checkout@v4
      - name: Set up Python
        uses: actions/setup-python@v5
        with:
          python-version: "3.12"
+     - name: Cache pip
+       uses: actions/cache@v4
+       with:
+         path: ~/.cache/pip
+         key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+         restore-keys: |
+           ${{ runner.os }}-pip-
      - name: Install dependencies
        run: |
          python -m pip install --upgrade pip
          pip install -r requirements.txt
-         pip install ruff
-     - name: Run lint checks
+         pip install ruff pytest pytest-asyncio
+     - name: Lint (ruff)
        run: |
          ruff check .
      - name: Run tests
        run: |
-         pytest -q
+         python -m pytest -q
